--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,8 @@ dev_dependencies:
   bloc_test: ^8.1.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
+    - assets/icons/1.5x/
+    - assets/icons/2x/
+    - assets/icons/3x/
