--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,17 @@ dependencies:
   equatable: ^2.0.3
   formz: ^0.4.0
   uuid: ^3.0.4
-  sqflite: ^2.0.0+4
+  moor: ^4.5.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   bloc_test: ^8.1.0
+  moor_generator: ^4.5.1
+  build_runner: ^2.1.1
 flutter:
   uses-material-design: true
