--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,8 @@ dev_dependencies:
   build_runner: ^2.1.1
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
+    - assets/icons/1.5x/
+    - assets/icons/2x/
+    - assets/icons/3x/
